jwksproxy/namespace-jwksproxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jwksproxy
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: 3ffd4d0e5573c362
