jwksproxy/deployment-k8s-noa-re.yaml
# Source: k8s.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-noa-re
  labels:
    app: k8s-noa-re
  namespace: jwksproxy
  annotations:
    noa.re/manifest-id: 61c221fc2fd86d4d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-noa-re
  template:
    metadata:
      labels:
        app: k8s-noa-re
      annotations:
        checksum/config: d2b765400d15d9fe660ad8dc3350133e132b662ed4453716bf0bc9c279a13116
    spec:
      containers:
      - name: k8s-noa-re
        image: nresare/jwksproxy:0.2.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: k8s-noa-re-config
          mountPath: /config
      volumes:
      - name: k8s-noa-re-config
        configMap:
          name: k8s-noa-re-config
