jwksproxy/gateway-k8s-noa-re.yaml
# Source: k8s.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-noa-re
  namespace: jwksproxy
  annotations:
    noa.re/manifest-id: 5d27da9a1c89c01f
spec:
  gatewayClassName: eg
  listeners:
  - name: k8s-noa-re
    protocol: HTTPS
    hostname: k8s.noa.re
    port: 443
    tls:
      certificateRefs:
      - name: k8s-noa-re-tls
        group: ''
        kind: Secret
